# ChangeLog for dev-python/pyid3lib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyid3lib/ChangeLog,v 1.19 2009/07/04 16:05:10 arfrever Exp $

  04 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -pyid3lib-0.5.1.ebuild, pyid3lib-0.5.1-r1.ebuild,
  +files/pyid3lib-0.5.1-gcc-4.4.patch:
  Fix building with glibc-2.10 and gcc-4.4 (bug #274076).

  26 Jan 2008; Samuli Suominen <drac@gentoo.org> pyid3lib-0.5.1-r1.ebuild:
  amd64 stable wrt #207255

  25 Jan 2008; Markus Rothe <corsair@gentoo.org> pyid3lib-0.5.1-r1.ebuild:
  Stable on ppc64; bug #207255

  25 Jan 2008; Raúl Porcel <armin76@gentoo.org> pyid3lib-0.5.1-r1.ebuild:
  ia64 stable wrt #207255

  25 Jan 2008; Ferris McCormick <fmccor@gentoo.org>
  pyid3lib-0.5.1-r1.ebuild:
  Sparc stable, Bug #207255.

  24 Jan 2008; nixnut <nixnut@gentoo.org> pyid3lib-0.5.1-r1.ebuild:
  Stable on ppc wrt bug 207255

  24 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  pyid3lib-0.5.1-r1.ebuild:
  stable x86, bug 207255

*pyid3lib-0.5.1-r1 (08 Aug 2007)

  08 Aug 2007; Ali Polatel <hawking@gentoo.org>
  +files/pyid3lib-0.5.1-py25.patch, +pyid3lib-0.5.1-r1.ebuild:
  Added patch to fix python-2.5 & 64 bit issues (bug 188067, thanks to Brian)

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org> pyid3lib-0.5.1.ebuild:
  Mark 0.5.1 stable on ia64

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> pyid3lib-0.5.1.ebuild:
  Mark 0.5.1 ~ia64

  15 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  pyid3lib-0.5.1.ebuild:
  Stable sparc.

  02 Sep 2004; Tom Gall <tgall@gentoo.org> pyid3lib-0.5.1.ebuild:
  stable on ppc64

  29 Aug 2004; Travis Tilley <lv@gentoo.org> pyid3lib-0.5.1.ebuild:
  stable on amd64

  04 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  pyid3lib-0.5.1.ebuild:
  Stable x86.

  04 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  pyid3lib-0.5.1.ebuild:
  ~sparc.
