@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/pyid3lib
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyid3lib/ChangeLog,v 1.19 2009/07/04 16:05:10 arfrever Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyid3lib/ChangeLog,v 1.20 2010/11/01 00:20:19 arfrever Exp $
+
+  01 Nov 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  pyid3lib-0.5.1-r1.ebuild:
+  Update EAPI. Fix dependencies. Set SUPPORT_PYTHON_ABIS. Avoid breaking
+  strict-aliasing rules.
 
   04 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   -pyid3lib-0.5.1.ebuild, pyid3lib-0.5.1-r1.ebuild,
